<resources>
    <string name="app_name">HamPay</string>
    <string name="app_name_slider">هم‌پی</string>
    <string name="hampay_network">شبکه پرداخت همراه هم‌پی</string>
    <string name="hampay_user">کاربر هم‌پی</string>
    <string name="intro_0_text">پرداخت مدرن، ساده و مطمئن</string>
    <string name="intro_1_title">پرداخت به کسب و کار</string>
    <string name="intro_1_text">پرداخت به کسب و کارهای اینترنتی و فروشگاه‌ها</string>
    <string name="intro_2_title">درخواست پرداخت</string>
    <string name="intro_2_text">ارسال درخواست پرداخت فردی و گروهی</string>
    <string name="intro_3_title">پرداخت قبض و خرید شارژ</string>
    <string name="intro_3_text">پرداخت قبوض خدماتی و خرید شارژ تلفن همراه</string>
    <string name="intro_4_title">با هم‌پی</string>
    <string name="intro_4_text">صمیمیت، راحتی و امنیت را در کنار دوستانتان تجربه کنید</string>
    <string name="intro_1">پرداخت مدرن، ساده و مطمئن</string>
    <string name="intro_2">پرداخت به کسب و کارهای گوناگون</string>
    <string name="intro_3">درخواست پرداخت</string>
    <string name="intro_4">فهرست پرداخت‌های در انتظار</string>
    <string name="intro_5">نمایش پرداخت‌ها و دریافت‌های گذشته</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_main_fragment">صفحه اصلی</string>
    <string name="nav_item_account_detail">جزئیات حساب</string>
    <string name="nav_item_settings">تنظیمات</string>
    <string name="nav_item_contacts_us">تماس با ما</string>
    <string name="nav_item_help">راهنما</string>
    <string name="nav_item_tour">تور هم‌پی</string>
    <string name="nav_item_exit">خروج</string>
    <string name="nav_item_hampay_about">درباره هم‌پی</string>
    <string name="nav_item_tac">قوانین و مقررات</string>
    <string name="nav_item_privacy">حریم خصوصی و امنیت</string>
    <string name="transaction_tacking_code">کد پیگیری: </string>
    <string name="transaction_amount">مبلغ: </string>
    <string name="transaction_vat">مالیات بر ارزش افزوده:</string>
    <string name="transaction_fee_charge">کارمزد: </string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_main_fragment</item>
        <item>@string/nav_item_account_detail</item>
        <item>@string/nav_item_settings</item>
        <item>@string/nav_item_contacts</item>
        <item>@string/nav_item_help</item>
        <item>@string/nav_item_tour</item>
        <item>@string/nav_item_hampay_about</item>
        <item>@string/nav_item_contacts_us</item>
        <item>@string/nav_item_tac</item>
        <item>@string/nav_item_privacy</item>
        <item>@string/nav_item_exit</item>
    </string-array>
    <string name="title_main_fragment">صفحه اصلی</string>
    <string name="title_account_detail">جزئیات حساب</string>
    <string name="title_settings">تنظیمات</string>
    <string name="notification_setting">اعلانات هم‌پی</string>
    <string name="title_hampay_about">درباره هم‌پی</string>
    <string name="title_guide">راهنما</string>
    <string name="message">پیام</string>
    <string name="insert_message">پیام</string>
    <string name="hampay_contact">ارتباط با هم‌پی</string>
    <string name="hampay_contact_failed">اطلاعات تماس با هم‌پی دریافت نشد.</string>
    <string name="msg_cellNumber_invalid">شماره همراه خود را صحیح وارد کنید</string>
    <string name="msg_nationalCode_invalid">کد ملی خود را صحیح وارد کنید</string>
    <string name="msg_invalid_email">ایمیل خود را صحیح وارد کنید</string>
    <string name="msg_email_invalid">ایمیل خود را صحیح وارد کنید</string>
    <string name="msg_username_invalid">نام و نام خانوادگی می‌بایستی بیشتر از ۲ حرف باشد</string>
    <string name="some_people_at_hampay">بعضی از دوستان شما در هم‌پی</string>
    <string name="register">ثبت نام</string>
    <string name="start">شروع</string>
    <string name="main_fragment_generate_factor">درخواست پرداخت</string>
    <string name="main_fragment_business_payment">پرداخت به کسب و کار</string>
    <string name="bill_already_paid">قبض قبلا پرداخت شده است.</string>
    <string name="main_fragment_bills_top_up">قبض و شارژ</string>
    <string name="topup_purchase">خرید شارژ</string>
    <string name="bills_mobile">قبوض موبایل</string>
    <string name="bills_payment">پرداخت قبوض</string>
    <string name="bills_mobile_text">شماره تلفن همراه مورد نظر را وارد نموده و یا بار کد قبض موبایل را اسکن نمائید.</string>
    <string name="bills_service_text">شناسه قبض و شناسه پرداخت قبض مورد نظر را وارد نموده و یا بارکد آن را اسکن نمائید.</string>
    <string name="topup_text">شماره تلفن همراه مورد نظر را وارد نموده و سپس مبلغ و نوع شارژ را انتخاب نمائید.</string>
    <string name="scan_barcode">اسکن بارکد</string>
    <string name="bills_service">پرداخت قبض</string>
    <string name="bills_end_term">پایان دوره</string>
    <string name="bills_mid_term">میان دوره</string>
    <string name="topup_amount">مبلغ شارژ</string>
    <string name="topup_type">نوع شارژ</string>
    <string name="bills_service_id">شناسه قبض</string>
    <string name="bills_id_transaction">شناسه قبض: </string>
    <string name="pay_id_transaction">شناسه پرداخت: </string>
    <string name="bills_service_payment">شناسه پرداخت</string>
    <string name="msg_invalid_bills_pay_id">شناسه قبض یا شناسه پرداخت نادرست است. لطفا مجددا تلاش نمائید.</string>
    <string name="main_fragment_pending_payment">صف انتظار</string>
    <string name="main_fragment_bill_top_up">قبض و شارژ</string>
    <string name="main_fragment_transactions">تراکنش‌ها</string>
    <string name="transaction_history_title">تراکنش‌ها</string>
    <string name="payment_request_title">درخواست پرداخت</string>
    <string name="payment_request_null_message">برای انتخاب کاربر و ارسال درخواست دکمه ... را لمس کنید.</string>
    <string name="payment_request_motivation_message">با دعوت دوستانتان به هم‌پی ۵۰ هزار تومان جایزه بگیرید</string>
    <string name="contact_list_footer_text">
        هم‌پی را به خانواده، دوستان و آشنایان معرفی کنید.
        \n\n
        بعد از نصب هم‌پی توسط ایشان، به آنها "درخواست پرداخت" بزنید. اگر درخواست شما توسط آن کاربر پرداخت شد و پرداخت به شما، جزء دو پرداخت اول ایشان توسط هم‌پی باشد، شما ۵ هزار تومان جایزه می گیرید.
        \n\n
        این روش را برای افراد دیگر تکرار کنید، به ازای ۱۰ پرداخت جایزه می‌گیرید.
    </string>
    <string name="business_purchase_title">پرداخت به کسب و کار</string>
    <string name="business_id">شناسه: </string>
    <string name="pending_purchase_payment_title">صف انتظار</string>
    <string name="detail_transaction">جزئیات تراکنش</string>
    <string name="cell_number">شماره همراه: </string>
    <string name="mobile_no_entry">شماره همراه </string>
    <string name="bank">بانک: </string>
    <string name="national_code">کد ملی: </string>
    <string name="email_address">ایمیل: </string>
    <string name="dialog_user_waiting">کاربر گرامی منتظر بمانید</string>
    <string name="dialog_start_communication">در حال ارتباط با سامانه هم‌پی</string>
    <string name="dialog_hampay_user_waiting">عزیز، منتظر بمانید</string>
    <string name="msg_exit_registration">با خروج در این مرحله، ثبت نام لغو می شود. آیا مطمئن هستید؟‌</string>
    <string name="confirm_exit_registration">بله</string>
    <string name="continuation_registration">خیر</string>
    <string name="last_login">آخرین بازدید شما </string>
    <string name="contact_us">ارتباط با شبکه پرداخت همراه هم‌پی</string>
    <string name="send_message">ارسال پیام</string>
    <string name="call_message">تماس با اپراتور</string>
    <string name="hp_msg_password_complexity_1">رمز عبور می‌بایستی شامل حرف و عدد باشد</string>
    <string name="hp_msg_password_complexity_2">رمز عبور بایستی شامل حداقل ۱ عدد و ۳ حرف باشد</string>
    <string name="hp_msg_password_complexity_3">رمز عبور بایستی شامل حداقل ۱ عدد و ۳ حرف باشد</string>
    <string name="hp_msg_password_complexity_4">رمز عبور نمی‌تواند شامل بیش از ۲ حرف تکراری باشد</string>
    <string name="dismatch_password">رمزعبور وارد شده تطابقی با هم ندارند.</string>
    <string name="retry_password">تلاش مجدد</string>
    <string name="dismatch_memorable">کلمه یادآوری وارد شده اشتباه می باشد.</string>
    <string name="remove_password_text">اطلاعات هم‌پی شما پاک خواهد شد و نیاز به ثبت نام مجدد دارید
        \n
اطمینان دارید؟
    </string>
    <string name="re_registeration">ثبت نام مجدد</string>
    <string name="do_re_registration">بله</string>
    <string name="cancel_remove_password">خیر</string>
    <string name="fail_sms_verification">کد اعتبار سنجی وارد شده صحیح نمی‌باشد. لطفا از صحت کد اطمینان حاصل کرده و کد را دوباره وارد کنید.</string>
    <string name="retry_sms">تایید</string>
    <string name="keep_on">ادامه</string>
    <string name="profile_entry">مشخصات فردی</string>
    <string name="please_entry_info">لطفا اطلاعات خود را وارد نمایید.</string>
    <string name="iran_prefix_cell_number">۰۹</string>
    <string name="iban_intro_payment">معرفی شماره شبا</string>
    <string name="iban_intro_setting">تغییر شماره شبا</string>
    <string name="sheba_text">IR</string>
    <string name="sheba_question_part1_text">شماره شبا</string>
    <string name="iban_question_part2_text">متعلق به %1$s نزد %2$s می‌باشد.</string>
    <string name="iban_empty_name">برای نام می‌بایستی حداقل ۲ حرف را وارد کنید.</string>
    <string name="sms_verification_text">کد فعال‌سازی "هم‌پی" به شماره %1$s ارسال خواهد شد</string>
    <string name="sms_request">ارسال</string>
    <string name="sms_cancel">انصراف</string>
    <string name="exit_app_text">آیا مایل به خروج از هم‌پی هستید؟</string>
    <string name="exit_app_yes">بله</string>
    <string name="exit_app_no">خیر</string>
    <string name="msg_fail_registration_entry">ثبت اطلاعات شما با مشکل مواجه شد، لطفا اتصال اینترنت خود را بررسی کنید</string>
    <string name="retry_registration_entry">تلاش مجدد</string>
    <string name="cancel_registration_entry">انصراف</string>
    <string name="user_profile_image_title">ویرایش عکس</string>
    <string name="user_profile_image_camera">دوربین</string>
    <string name="user_profile_image_gallary">گالری تصاویر</string>
    <string name="user_profile_image_remove">حذف عکس</string>
    <string name="user_profile_image_cancel">انصراف</string>
    <string name="merchant_text_page_1">
        به منظور ارسال درخواست پرداخت به بیش از ۱۰ نفر نیاز است تا درخواست کد پذیرندگی نموده و مدارک زیر را به آدرس ایمیل opsupport@homapay.com ارسال نمایید:
        \n\n
مدارک لازم جهت دریافت کد پذیرندگی(ویژه اشخاص حقوقی)
        \n
        ۱- تصویر صفحه اول دفترچه حساب بانکی به نام شرکت و یا موسسه نزد یکی از شعب بانک‌های کشور
    \n
        ۲- تصویر برابر اصل کارت ملی و شناسنامه مدیران و مسئولین صاحب امضا
        \n
        ۳-  تصویر برابر اصل روزنامه رسمی، آگهی تأسیس و آخرین آگهی تغییرات
\n\n
        مدارک مورد نیاز برای استفاده از خدمات درگاه پرداخت:(ویژه اشخاص حقیقی)
        \n
        ۱- تصویر صفحه اول دفترچه حساب بانکی به نام شخص نزد یکی از شعب بانک‌های کشور
        \n
        ۲- تصویر برابر اصل کارت ملی و شناسنامه
        \n
        ۳- تصویر برابر اصل اجاره‌نامه یا سند مالکیت محل کار یا سکونت

    </string>
    <string name="merchant_id_request_title">درخواست کد پذیرندگی</string>
    <string name="merchant_id_cancel">انصراف</string>
    <string name="merchant_id_close">بستن</string>
    <string name="merchant_id_request">درخواست</string>
    <string name="merchant_id_not_set">کد پذیرندگی برای حساب شما فعال نشده است. جهت ثبت درخواست کد پذیرندگی، دکمه درخواست را انتخاب نمایید.</string>
    <string name="merchant_id_status_pending">درخواست شما ثبت گردید.
    \n
لطفا مدارک لازم را به آدرس ایمیل opsupport@homapay.com ارسال نمایید
    </string>
    <string name="merchant_info">کد پذیرندگی شما با شماره %1$s فعال است.</string>
    <string name="permission_device">دسترسی درخواستی برای عملکرد مناسب هم‌پی می‌باشد و عدم تایید شما باعث خروج از برنامه هم‌پی می‌شود.</string>
    <string name="permission_grant">تایید دسترسی</string>
    <string name="permission_exit">خروج</string>
</resources>