<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:geekui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:background="@drawable/dialog_pay_theme"
    android:orientation="vertical"
    android:padding="15dp">


    <com.hampay.mobile.android.component.FacedTextView
        geekui:customTypeface="fonts/iran_sans.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:text="@string/exit_app_text"
        android:layout_marginTop="15dp"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <com.hampay.mobile.android.component.FacedTextView
            android:id="@+id/exit_app_yes"
            geekui:customTypeface="fonts/iran_sans.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dis_confirmation"
            android:textSize="22sp"
            android:text="@string/exit_app_yes" />

        <com.hampay.mobile.android.component.FacedTextView
            android:id="@+id/exit_app_no"
            geekui:customTypeface="fonts/iran_sans.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/confirmation"
            android:textSize="22sp"
            android:text="@string/exit_app_no"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

</LinearLayout>