<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:geekui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:background="@drawable/dialog_pay_theme"
    android:orientation="vertical"
    android:padding="15dp">

    <xyz.homapay.hampay.mobile.android.component.FacedTextView
        android:id="@+id/sms_user_notify"
        geekui:customTypeface="fonts/iran_sans.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/normal_text"
        android:textSize="15dp"
        android:gravity="right"
        android:layout_margin="12dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/sms_verification_text"
        android:layout_alignParentBottom="true"
        android:lineSpacingExtra="8dp"/>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <xyz.homapay.hampay.mobile.android.component.FacedTextView
            android:id="@+id/dis_confirmation"
            geekui:customTypeface="fonts/iran_sans.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/pay_disconfirm"
            android:textSize="14dp"
            android:text="@string/sms_cancel" />

        <xyz.homapay.hampay.mobile.android.component.FacedTextView
            android:id="@+id/confirmation"
            geekui:customTypeface="fonts/iran_sans.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/pay_confirm"
            android:textSize="14dp"
            android:text="@string/sms_request"
            android:layout_alignParentRight="true"
            android:contentDescription="done"/>

    </RelativeLayout>

</LinearLayout>