<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:geekui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:background="@drawable/dialog_pay_theme"
    android:orientation="vertical"
    android:padding="8dp">

    <com.hampay.mobile.android.component.FacedTextView
        android:id="@+id/responseCode"
        geekui:customTypeface="fonts/iran_sans.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/normal_text"
        android:textSize="20sp"
        android:text="@string/msg_fail_fetch_bank_list"
        android:gravity="right"
        android:layout_gravity="right"
        android:layout_margin="8dp"/>


    <com.hampay.mobile.android.component.FacedTextView
        android:id="@+id/responseMessage"
        geekui:customTypeface="fonts/iran_sans.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/normal_text"
        android:textSize="20sp"
        android:text="@string/msg_fail_registration_entry"
        android:gravity="right"
        android:layout_gravity="right"
        android:layout_margin="8dp"/>



    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp">

        <com.hampay.mobile.android.component.FacedTextView
            android:id="@+id/retry_registration_entry"
            geekui:customTypeface="fonts/iran_sans.ttf"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textColor="@color/pay_confirm"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:text="@string/retry_registration_entry" />

        <com.hampay.mobile.android.component.FacedTextView
            android:id="@+id/cancel_request"
            geekui:customTypeface="fonts/iran_sans.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:text="@string/cancel_registration_entry" />

    </RelativeLayout>

</LinearLayout>