<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:geekui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="backActionBar"
            android:padding="12dp"
            android:src="@drawable/back" />

        <xyz.homapay.hampay.mobile.android.component.FacedTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="8dp"
            android:text="@string/merchant_id_request_title"
            android:textColor="@color/app_origin"
            android:textSize="18sp"
            geekui:customTypeface="fonts/vazir_regular.ttf" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_origin" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="#ebebeb">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <xyz.homapay.hampay.mobile.android.component.FacedTextView
                    android:id="@+id/merchant_id_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:gravity="right"
                    android:text="@string/merchant_text_page_1"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    geekui:customTypeface="fonts/vazir_regular.ttf" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>

            </LinearLayout>

        </ScrollView>


        <LinearLayout
            android:id="@+id/requestLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="visible">

            <xyz.homapay.hampay.mobile.android.component.FacedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="right"
                android:text="@string/merchant_id_not_set"
                android:textColor="@android:color/black"
                android:textSize="15dp"
                geekui:customTypeface="fonts/vazir_regular.ttf" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <xyz.homapay.hampay.mobile.android.component.FacedTextView
                    android:id="@+id/closeRequestMerchantId"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:background="@drawable/modal_success_button_style"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/merchant_id_cancel"
                    android:textColor="@android:color/white"
                    android:textSize="15dp"
                    geekui:customTypeface="fonts/vazir_regular.ttf" />

                <xyz.homapay.hampay.mobile.android.component.FacedTextView
                    android:id="@+id/requestMerchantId"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:background="@drawable/modal_success_button_style"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/merchant_id_request"
                    android:textColor="@android:color/white"
                    android:textSize="15dp"
                    geekui:customTypeface="fonts/vazir_regular.ttf" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/statusLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="gone">

            <xyz.homapay.hampay.mobile.android.component.FacedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/merchant_id_status_pending"
                android:textColor="@android:color/black"
                android:textSize="15dp"
                geekui:customTypeface="fonts/vazir_regular.ttf" />

            <xyz.homapay.hampay.mobile.android.component.FacedTextView
                android:id="@+id/closeMerchantId"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/modal_success_button_style"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/merchant_id_close"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                geekui:customTypeface="fonts/vazir_regular.ttf" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/resultLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="gone">

            <xyz.homapay.hampay.mobile.android.component.FacedTextView
                android:id="@+id/merchantInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/merchant_info"
                android:textColor="@android:color/black"
                android:textSize="15dp"
                geekui:customTypeface="fonts/vazir_regular.ttf" />

            <xyz.homapay.hampay.mobile.android.component.FacedTextView
                android:id="@+id/closeViewMerchantId"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/modal_success_button_style"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/merchant_id_close"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                geekui:customTypeface="fonts/vazir_regular.ttf" />


        </LinearLayout>

    </RelativeLayout>


</LinearLayout>
